apps/editor/src/views/panel/frontend/Home/Home.module.scss
.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 4px;
  width: 100%;
  padding: 4px 12px;

  &__left {
    display: flex;
    align-items: center;
    gap: 4px;
  }

  &__home {
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    --size: 20px;
    width: var(--size);
    height: var(--size);
    color: var(--vscode-icon-foreground);
  }

  &__text {
    display: flex;
    align-items: center;
    height: 24px;
    font-family: var(--font-family-accent);
    font-size: 18px;
    line-height: 1;
    letter-spacing: 1px;
    padding-top: 1px;
  }
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  gap: 24px;
  height: 100%;
  padding-top: 4px;

  &--sticky {
    margin-top: 44px;
  }
}

.inner {
  display: flex;
  flex-direction: column;
  width: 100%;

  &__responses {
    margin: 0;
  }

  &__mode {
    position: relative;
    display: flex;
    background-color: var(--vscode-sideBar-background);
    border-radius: 10px;
    border: 1px solid var(--cwc-border-color);
    overflow: hidden;
    margin: 0 12px;
    z-index: 1;

    > button {
      flex: 1;
    }

    &::after {
      content: '';
      position: absolute;
      left: 50%;
      top: 50%;
      transform: translate(-50%, -50%);
      width: 1px;
      height: 35px;
      background-color: var(--cwc-border-color-dimmed);
      pointer-events: none;
    }

    &--sticky {
      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
      position: sticky;
      top: 10px;
      animation: stickyFadeIn var(--transition-duration-150)
        var(--transition-timing-function);

      &::after {
        height: 20px;
      }
    }
  }

  &__empty {
    padding-left: 34px;
    padding-right: 12px;
    color: var(--cwc-text-color-dimmed);
  }

  &__buttons {
    display: flex;
    flex-direction: column;
    gap: 6px;
    width: 100%;
  }

  &__tasks {
    width: 100%;
  }

  &__tasks-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1px 14px 3px 12px;
    font-size: 11px;
    font-weight: bold;
    color: var(--cwc-text-color-dimmed);
    opacity: 0.8;
  }
}

.bottom {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 8px;
  font-size: 12px;
  user-select: text;
  width: 100%; // For easier text selection
  padding: 0 12px 12px 12px;

  &__links {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 4px;
  }

  a:hover {
    text-decoration: underline;
  }
}

@keyframes stickyFadeIn {
  from {
    opacity: 0;
    transform: translateY(-10px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.add-button {
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  height: 16px;
  width: 16px;
  color: var(--vscode-icon-foreground);
  position: relative;
  cursor: pointer;
  flex-shrink: 0;

  &:focus {
    outline: none;
  }

  &::before {
    font-family: 'codicon';
    font-size: 14px;
    content: '\ea60';
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0.6;
  }

  &:hover::before {
    opacity: 1;
  }
}

